--- a/Client/Assets/About/Licenses.html
+++ b/Client/Assets/About/Licenses.html
@@ -765,6 +765,45 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 </div>
 <center><p>-</p></center>
 
+<div>
+<input id="ac-35" name="accordion-1" type="checkbox" />
+<label for="ac-35"><h2>fmdb</h2></label>
+<article>
+<p class="link"><a href="https://github.com/ccgus/fmdb">https://github.com/ccgus/fmdb</a></p>
+<div class="text">
+    <p>If you are using FMDB in your project, I'd love to hear about it.  Let Gus know
+    by sending an email to gus@flyingmeat.com.</p>
+
+    <p>And if you happen to come across either Gus Mueller or Rob Ryan in a bar, you
+    might consider purchasing a drink of their choosing if FMDB has been useful to
+    you.</p>
+
+    <p>Finally, and shortly, this is the MIT License.</p>
+
+    <p>Copyright (c) 2008-2014 Flying Meat Inc.</p>
+
+    <p>Permission is hereby granted, free of charge, to any person obtaining a copy
+    of this software and associated documentation files (the "Software"), to deal
+    in the Software without restriction, including without limitation the rights
+    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+    copies of the Software, and to permit persons to whom the Software is
+    furnished to do so, subject to the following conditions:</p>
+
+    <p>The above copyright notice and this permission notice shall be included in
+    all copies or substantial portions of the Software.</p>
+
+    <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+    THE SOFTWARE.</p>
+</div>
+</article>
+</div>
+<center><p>-</p></center>
+
 <!-- Ecosia not used third party
 <div>
 <input id="ac-36" name="accordion-1" type="checkbox" />
